Fix Application list missing title margin and excessive padding on small screens

--- a/src/Mapbender/ManagerBundle/Resources/public/sass/blocklist.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/blocklist.scss
@@ -60,3 +60,10 @@
     text-decoration: none;
   }
 }
+
+// Ensure vertical margin between screenshot and application title below col-md breakpoint width
+@media screen and (max-width: 991px) {
+  .listFilterApplicationBoxes li .col-md-10 {
+    margin-top: 1rem;
+  }
+}
