--- a/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
+++ b/src/Mapbender/ManagerBundle/Resources/public/sass/manager/manager.scss
@@ -357,6 +357,9 @@ ul.dropdownList{
 }
 .content-box-lg {
   padding: 30px 40px;
+  @media screen and (max-width: 767px) {
+    padding: 25px;
+  }
 }
 .content-box-md {
   padding: 15px;
